# tpt-cortex

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO 1260616.md  TODO.md  cortex.manifest.json  go.work  spec.txt
cortex-android/: .gitignore  README.md  gradlew  settings.gradle.kts
cortex-android/app/: build.gradle.kts  proguard-rules.pro
cortex-android/app/src/main/: AndroidManifest.xml
cortex-android/app/src/main/res/drawable/: ic_cortex_notification.xml  tab_indicator_selected.xml
cortex-android/app/src/main/res/layout/: activity_dashboard.xml  activity_main.xml  activity_onboarding.xml  fragment_battery.xml  fragment_permission.xml  (+2 more)
cortex-android/gradle/: libs.versions.toml
cortex-daemon/: go.mod  go.sum  main.go
cortex-daemon/db/: db.go
cortex-daemon/interpreter/: eval.go
cortex-daemon/ipc/: protocol.go  server.go  server_test.go
cortex-daemon/manifest/: manifest.go
cortex-daemon/registry/: native.go  registry.go  registry_test.go
cortex-daemon/scheduler/: scheduler.go
cortex-daemon/tray/: tray.go
cortex-daemon/updater/: updater.go
cortex-engine/: Cargo.toml  GRAMMAR.ebnf
cortex-engine/src/: ffi.rs  lib.rs  main.rs  wasm.rs
cortex-engine/src/ast/: mod.rs  nodes.rs  types.rs
cortex-engine/src/checker/: checker.rs  error.rs  manifest.rs  mod.rs  scope.rs
cortex-engine/src/compiler/: binary.rs  chunk.rs  compiler.rs  disasm.rs  mod.rs
cortex-engine/src/lexer/: error.rs  lexer.rs  mod.rs  span.rs  token.rs
cortex-engine/src/parser/: error.rs  mod.rs  parser.rs
cortex-engine/src/vm/: error.rs  mod.rs  registry.rs  value.rs  vm.rs
cortex-lsp/: Cargo.toml
cortex-lsp/src/: main.rs
cortex-pwa/: README.md  package-lock.json  package.json
cortex-pwa/src/lib/: cortex-client.ts
cortex-pwa/src/routes/: +page.svelte
cortex-pwa/src/routes/nodes/: +page.svelte
cortex-shell/: Cargo.toml
cortex-shell/src/: main.rs
examples/: bad_types.ctx  gps_timesheet.ctx  hello.ctx  math.ctx  sneaky.ctx
(+22 files in other folders)
