[package]
name = "cortex-lsp"
version = "0.1.0"
edition = "2021"
description = "Language Server Protocol server for the Cortex language"

[[bin]]
name = "cortex-lsp"
path = "src/main.rs"

[dependencies]
cortex-engine = { path = "../cortex-engine" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
serde_json = "1"
